--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
         <div><input type="text" placeholder="Email"></div>
         <div><textarea rows="10" placeholder="Mensaje"></textarea></div>
         <button>ENVIAR</button>
+        <div> <a href="https://api.whatsapp.com/send?phone=573017443790">Send Message</a></div>
       </form>
     </section>
     
