--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
         <div><input type="text" placeholder="Email"></div>
         <div><textarea rows="10" placeholder="Mensaje"></textarea></div>
         <button>ENVIAR</button>
-        <div> <a href="https://api.whatsapp.com/send?phone=573017443790">Send Message</a></div>
       </form>
     </section>
     
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.668919649099!2d-75.59452028542938!3d6.175059628829453!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e46824f5773b1cd%3A0x5252c7aa8134994d!2sViva+envigado+centro+comercial!5e0!3m2!1sen!2sco!4v1551111833616" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 
     <footer>
-      &copy 2019 <strong>Studio Dev</strong>, Todos los derechos reservados
+      &copy 2019 <strong>Studio Dev</strong>, Todos los derechos reservado
+      <div> <a href="https://api.whatsapp.com/send?phone=573017443790">Send Message</a></div>
     </footer>
 
   </body>
